# doggo-drive

./: .env.example  Cargo.toml
migrations/2023-11-27-204648_create_users/: up.sql
migrations/2023-11-27-204824_create_doggo_files/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: init.rs  mod.rs
src/handlers/: error.rs
src/models/: doggo_file.rs  mod.rs  user.rs
src/utils/: mod.rs  static_vars.rs
