[package]
name = "doggo-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "network-address", "r2d2"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["json", "gzip"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
